Внесены исправления по замечаниям. Адаптированы тесты